# gitp

./: LICENSE  README.MD  TODO.MD
src/: long_description.md  readme.md  setup.cfg
src/gitp/: README.MD  __main__.py
src/gitp/command_parser/: README.MD  command.py  command2.py  command_assembler.py  command_assembler_test.py  command_parser.py  command_parser_test.py  command_test.py  dict_tree_finder.py  dict_tree_finder_test.py  text.py
src/gitp/command_parser/dict_tree/: dict_tree_finder.py  dict_tree_finder_test.py  dict_tree_helper.py  dict_tree_helper_test.py
src/gitp/command_parser/dict_tree_finder/: dict_tree_finder.py  dict_tree_finder_test.py
src/gitp/commons/: errorable.py  errorable_test.py  utils.py  utils_test.py
src/gitp/commons2/: myutils.py  myutils2.py  myutils2_test.py
src/gitp/gitp/: commands_config.py  gitp.py  gitpcli.py  main.py
src/gitp/gitp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/gitp/gitp/commands/branch/: branch.py  branch_connect.py  branch_create.py  branch_delete.py  branch_push.py  branch_rename.py  branch_reset.py
src/gitp/gitp/commands/branches/: branches.py  branches_show.py
src/gitp/gitp/commands/commit/: _argument_type_commit.py  commit.py  commit_delete.py  commit_undo.py
src/gitp/gitp/core/cli_execute/: __init__.py  cli_execute.py
src/gitp/gitp/core/command/: __init__.py
src/gitp/gitp/core/command_exception/: __init__.py  command_exception.py
src/gitp/gitp/core/gitutils/: gitutils.py
src/gitp/gitp/core/types/errorable/: errorable.py
src/gitp/gitp/main/: main.py
src/gitp/test/: test.py
src/gitp/testcasex/: README.MD  testcasex.py
src/test/: test_gitp.py
