[metadata]
# package name used for uninstalling
name = gitp

version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: long_description.MD
long_description_content_type = text/markdown
url = https://github.com/YOUR_REPOSITORY_OR_WEBSITE
project_urls =
    Bug Tracker = https://github.com/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
# automatically gather all modules in `gitp`
package_dir =
    = gitp
packages = find:
python_requires = >=3.6

# set root directory
[options.packages.find]
where = gitp

[options.entry_points]
console_scripts =
    gitp = gitp.main:main

# ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
#     VERY IMPORTANT
#
#          ↓
#
#  This is to run your python "program" like a regular program
#   (without needing `python3` or `python -m`).
#
#
# Explanation:
#      `gitp = gitp.main.main:generic_main`
#    means
#      The command `myprogram` on the CLI will run
#      `./gitp/main/main.py : generic_main()`
#
#    So `gitp` here is like an alias.
#
# To prevent troubles uninstalling: the "alias" name, it should
#  be the same as the package name (top). That way the user can
#  very easily uninstall via `pip uninstall PACKAGE_NAME`
#