[metadata]
name = gitp

version = 1.0.0
author = DarkTrick
description = Tool to simplify the git interface
long_description = file: long_description.md
long_description_content_type = text/markdown
url = https://github.com/DarkTrick/gitp
project_urls =
    Bug Tracker = https://github.com/DarkTrick/gitp/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
# automatically gather all modules in `gitp`
package_dir =
    = gitp
packages = find:
python_requires = >=3.6

# set root directory
[options.packages.find]
where = gitp

[options.entry_points]
console_scripts =
    gitp = gitp.main:main
